--- a/standard.css
+++ b/standard.css
@@ -14,7 +14,7 @@ body, pre {
 
 div.inner{
   margin-left:100px;
-
+  height:3508px
   background: url('mail.png') no-repeat center center fixed;
 
 }
@@ -34,7 +34,7 @@ l{
 mi {
   font-size: 150%;
 }
-footer mi {
+ayc .copr {
   
   background: #2dff00;
   margin-left: 100px;
